docs(swagger): atualiza documentação e adiciona arquivos de autenticação
